fixed head nav Social Media links spacing

--- a/css/style.css
+++ b/css/style.css
@@ -174,6 +174,39 @@ img {
 	color: #a3c3e1;
 }
 
+
+
+.left {
+	float: left;
+	width: 33%;
+	border-right: 1px solid #3389bd;
+
+}
+
+.right {
+	float: right;
+	padding-bottom: 0em; 
+	width: 33%;
+}
+
+.nav4 {
+	float: left;
+	margin-left: 40% ;
+	margin-top: 1em; 
+}
+
+.nav5 {
+	float: right;
+	margin-right: 40%;
+	margin-top: 1.1em; 
+
+}
+
+.nav6 {
+	margin-left: 21% ;
+	margin-top: 1em; 
+}
+
 .video {
 	max-height: 15em;
 	max-width: 430px ;
@@ -225,38 +258,6 @@ img {
 	color: #ffffff;
 	font-size: 1em;
 
-}
-
-
-.left {
-	float: left;
-	width: 33%;
-	border-right: 1px solid #3389bd;
-
-}
-
-.right {
-	float: right;
-	padding-bottom: 0em; 
-	width: 33%;
-}
-
-.nav4 {
-	float: left;
-	margin-left: 40% ;
-	margin-top: .5em; 
-}
-
-.nav5 {
-	float: right;
-	margin-right: 40%;
-	margin-top: .6em; 
-
-}
-
-.nav6 {
-	margin-left: 25% ;
-	margin-top: .5em; 
 }
 
 .head-nav ul {
